# Rust-Craft-Optimizer-GPL

./: CONTRIBUTING.md  Cargo.toml  README.md
crates/rcogpl-api/: Cargo.toml
crates/rcogpl-api/src/: main.rs
crates/rcogpl-core/: Cargo.toml
crates/rcogpl-core/src/: lib.rs
crates/rcogpl-gui/: Cargo.toml
crates/rcogpl-gui/src/: main.rs
crates/rcogpl-shared/: Cargo.toml
crates/rcogpl-shared/src/: lib.rs
crates/rcogpl-universal/: Cargo.toml
crates/rcogpl-universal/src/: lib.rs
