[workspace]
resolver = "2"
members = [
    "crates/rcogpl-shared",
    "crates/rcogpl-core",
    "crates/rcogpl-universal",
    "crates/rcogpl-api",
    "crates/rcogpl-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/ThMrre/Rust-Craft-Optimizer-GPL"
authors = ["ThMrre"]

[workspace.dependencies]
# Shared
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Core
rayon = "1.10"

# API
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }

# GUI
egui = "0.30"
eframe = "0.30"

# Utils
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
